--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,15 @@
 databases:
   - name: TheRialNews
-    databaseName: TheRialNews
-    user: TheRialNews
+    databaseName: the_rial_news  # Cambiado a un formato válido
+    user: rial_news_user  # Cambiado a un formato válido
     plan: free
-
 services:
   - type: web
     name: TheRialNews
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
-    # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
+    # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand solo disponible en instancias pagadas
     startCommand: "bundle exec rails server"
     envVars:
       - key: DATABASE_URL
@@ -20,4 +19,4 @@ services:
       - key: RAILS_MASTER_KEY
         sync: false
       - key: WEB_CONCURRENCY
-        value: 2 # sensible default
+        value: 2  # valor por defecto razonable
